Added MPIF theorem 2 + Figure 1. Need to add proof sketch

--- a/introduction/intro.tex
+++ b/introduction/intro.tex
@@ -107,7 +107,7 @@ I chose SSM as it is the terminology often preferred by practitioners.
   
 \begin{eqnarray}
   \label{eq:likedef}
-  \mathcal{L}(\paramVec) = f_{\bm{Y}_{1:N}}\big(\bm{y}_{1:N}^*; \, \paramVec\big) = \int f_{\bm{X}_{\seq{0}{N}}, \bm{Y}_{\seq{1}{N}}}\big(\bm{x}_{\seq{0}{N}}, \bm{y}_{\seq{1}{N}}^*;\, \paramVec\big) \, d\bm{x}_{\seq{0}{N}}.
+  \mathcal{L}(\paramVec; \bm{y}^*) = f_{\bm{Y}_{1:N}}\big(\bm{y}_{1:N}^*; \, \paramVec\big) = \int f_{\bm{X}_{\seq{0}{N}}, \bm{Y}_{\seq{1}{N}}}\big(\bm{x}_{\seq{0}{N}}, \bm{y}_{\seq{1}{N}}^*;\, \paramVec\big) \, d\bm{x}_{\seq{0}{N}}.
 \end{eqnarray}
 
 \end{frame}
